# yusra-model

./: .gitignore  Dockerfile  Import_orders_in_pipeline.csv  PLAN.md  README.md  docker-compose.yml  pyproject.toml
config/: default.yaml  schema.json
src/yusra_model/: __init__.py  cli.py
src/yusra_model/config/: __init__.py  loader.py  schema.py  validation.py
src/yusra_model/domain/: __init__.py  capital.py  costs.py  revenue.py  strategy.py  taxation.py
src/yusra_model/engine/: __init__.py  project.py  statements.py
src/yusra_model/models/: __init__.py  cashflow.py  covenants.py  loans.py  multi_optimizer.py  optimizer.py  ratios.py  targets.py
src/yusra_model/output/: __init__.py  excel.py  full_excel.py  pdf.py
src/yusra_model/output/sheets/: __init__.py  dashboard.py  inputs.py  projection.py  schedule.py  strategy.py
src/yusra_model/strategy/: __init__.py  dashboard.py  delta.py  scenario.py  sensitivity.py
tests/: conftest.py  test_cashflow.py  test_config_loader.py  test_covenants.py  test_domain.py  test_engine.py  test_loans.py  test_multi_optimizer.py  test_optimizer.py  test_ratios.py  test_strategy.py  test_targets.py  test_validation.py
