[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yusra-model"
version = "1.1.0"
description = "YUSRA PHARMA PLC — Murabaha Revolving Loan Financial Model"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "YUSRA PHARMA PLC"},
]

dependencies = [
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "click>=8.0",
    "plotly>=5.18",
    "kaleido>=0.2",
    "weasyprint>=60",
    "jinja2>=3.1",
    "jsonschema>=4.20",
]

[project.scripts]
yusra-model = "yusra_model.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["yusra_model*"]

[tool.setuptools.package-data]
"yusra_model" = ["templates/*.html", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
